// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Theme preview and colors page Render theme settings page when instance has no theme set up. 1`] = `
<div
  className="console-page"
>
  <div
    className="d-flex justify-content-center align-middle email-activation-alert"
  >
    <i
      className="alert-icon fas fa-exclamation-triangle fa-xs"
    />
    One of your email addresses is pending confirmation. Please confirm it to begin managing your Open edX instance.
  </div>
  <div
    className="console-page-container"
  >
    <div
      className="console-page-content row"
    >
      <div
        className="container-fluid"
      >
        <div
          className="row"
        >
          <div
            className="col-md-3"
          >
            <div
              className="customization-menu accordion"
            >
              <div
                className="card"
              >
                <div
                  className="card-header"
                >
                  <div
                    className="card-header"
                    onClick={[Function]}
                    variant="link"
                  >
                    Theme
                  </div>
                </div>
                <div
                  aria-expanded={null}
                  className="collapse show"
                >
                  <div
                    className="card-body"
                  >
                    <div
                      className="flex-column nav card-header-undefined"
                      onKeyDown={[Function]}
                    >
                      <a
                        aria-current={null}
                        href="/console/theming/preview-and-colors"
                        onClick={[Function]}
                      >
                        Preview & colors
                      </a>
                      <a
                        aria-current={null}
                        href="/console/theming/logos"
                        onClick={[Function]}
                      >
                        Logos
                      </a>
                      <a
                        aria-current={null}
                        href="/console/theming/buttons"
                        onClick={[Function]}
                      >
                        Buttons
                      </a>
                      <a
                        aria-current={null}
                        href="/console/theming/navigation"
                        onClick={[Function]}
                      >
                        Navigation
                      </a>
                      <a
                        aria-current={null}
                        href="/console/theming/footer"
                        onClick={[Function]}
                      >
                        Footer
                      </a>
                      <a
                        aria-current={null}
                        href="/console/theming/hero"
                        onClick={[Function]}
                      >
                        Hero
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="card"
              >
                <div
                  className="card-header"
                >
                  <div
                    className="card-header"
                    onClick={[Function]}
                    variant="link"
                  >
                    Custom Pages
                  </div>
                </div>
                <div
                  aria-expanded={null}
                  className="collapse"
                >
                  <div
                    className="card-body"
                  >
                    <div
                      className="flex-column nav card-header-undefined"
                      onKeyDown={[Function]}
                    >
                      <a
                        aria-current={null}
                        href="/console/custom-pages/about"
                        onClick={[Function]}
                      >
                        About
                      </a>
                      <a
                        aria-current={null}
                        href="/console/custom-pages/contact"
                        onClick={[Function]}
                      >
                        Contact
                      </a>
                      <a
                        aria-current={null}
                        href="/console/custom-pages/donate"
                        onClick={[Function]}
                      >
                        Donate
                      </a>
                      <a
                        aria-current={null}
                        href="/console/custom-pages/tos"
                        onClick={[Function]}
                      >
                        Terms of Service
                      </a>
                      <a
                        aria-current={null}
                        href="/console/custom-pages/honor"
                        onClick={[Function]}
                      >
                        Honor Code
                      </a>
                      <a
                        aria-current={null}
                        href="/console/custom-pages/privacy"
                        onClick={[Function]}
                      >
                        Privacy Policy
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="card"
              >
                <div
                  className="card-header"
                >
                  <div
                    className="card-header"
                    onClick={[Function]}
                    variant="link"
                  >
                    Instance Settings
                  </div>
                </div>
                <div
                  aria-expanded={null}
                  className="collapse"
                >
                  <div
                    className="card-body"
                  >
                    <div
                      className="flex-column nav card-header-undefined"
                      onKeyDown={[Function]}
                    >
                      <a
                        aria-current={null}
                        href="/console/settings/general"
                        onClick={[Function]}
                      >
                        General
                      </a>
                      <a
                        aria-current="page"
                        className="disabled active"
                        href="/"
                        onClick={[Function]}
                        style={Object {}}
                      >
                        Domain
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="card"
              >
                <div
                  className="card-header"
                >
                  <div
                    className="card-header"
                    onClick={[Function]}
                    variant="link"
                  >
                    Courses (Studio)
                  </div>
                </div>
                <div
                  aria-expanded={null}
                  className="collapse"
                >
                  <div
                    className="card-body"
                  >
                    <div
                      className="flex-column nav card-header-undefined"
                      onKeyDown={[Function]}
                    >
                      <a
                        aria-current={null}
                        href="/console/courses/manage"
                        onClick={[Function]}
                      >
                        Manage
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-9"
          >
            <div
              className="customization-form"
            >
              <h2>
                Preview and colors
              </h2>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Theme preview and colors page Render theme settings page with theme set up, fields disabled after pushing changes. 1`] = `
<div
  className="console-page"
>
  <div
    className="d-flex justify-content-center align-middle email-activation-alert"
  >
    <i
      className="alert-icon fas fa-exclamation-triangle fa-xs"
    />
    One of your email addresses is pending confirmation. Please confirm it to begin managing your Open edX instance.
  </div>
  <div
    className="console-page-container"
  >
    <div
      className="console-page-content row"
    >
      <div
        className="container-fluid"
      >
        <div
          className="row"
        >
          <div
            className="col-md-3"
          >
            <div
              className="customization-menu accordion"
            >
              <div
                className="card"
              >
                <div
                  className="card-header"
                >
                  <div
                    className="card-header"
                    onClick={[Function]}
                    variant="link"
                  >
                    Theme
                  </div>
                </div>
                <div
                  aria-expanded={null}
                  className="collapse show"
                >
                  <div
                    className="card-body"
                  >
                    <div
                      className="flex-column nav card-header-undefined"
                      onKeyDown={[Function]}
                    >
                      <a
                        aria-current={null}
                        href="/console/theming/preview-and-colors"
                        onClick={[Function]}
                      >
                        Preview & colors
                      </a>
                      <a
                        aria-current={null}
                        href="/console/theming/logos"
                        onClick={[Function]}
                      >
                        Logos
                      </a>
                      <a
                        aria-current={null}
                        href="/console/theming/buttons"
                        onClick={[Function]}
                      >
                        Buttons
                      </a>
                      <a
                        aria-current={null}
                        href="/console/theming/navigation"
                        onClick={[Function]}
                      >
                        Navigation
                      </a>
                      <a
                        aria-current={null}
                        href="/console/theming/footer"
                        onClick={[Function]}
                      >
                        Footer
                      </a>
                      <a
                        aria-current={null}
                        href="/console/theming/hero"
                        onClick={[Function]}
                      >
                        Hero
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="card"
              >
                <div
                  className="card-header"
                >
                  <div
                    className="card-header"
                    onClick={[Function]}
                    variant="link"
                  >
                    Custom Pages
                  </div>
                </div>
                <div
                  aria-expanded={null}
                  className="collapse"
                >
                  <div
                    className="card-body"
                  >
                    <div
                      className="flex-column nav card-header-undefined"
                      onKeyDown={[Function]}
                    >
                      <a
                        aria-current={null}
                        href="/console/custom-pages/about"
                        onClick={[Function]}
                      >
                        About
                      </a>
                      <a
                        aria-current={null}
                        href="/console/custom-pages/contact"
                        onClick={[Function]}
                      >
                        Contact
                      </a>
                      <a
                        aria-current={null}
                        href="/console/custom-pages/donate"
                        onClick={[Function]}
                      >
                        Donate
                      </a>
                      <a
                        aria-current={null}
                        href="/console/custom-pages/tos"
                        onClick={[Function]}
                      >
                        Terms of Service
                      </a>
                      <a
                        aria-current={null}
                        href="/console/custom-pages/honor"
                        onClick={[Function]}
                      >
                        Honor Code
                      </a>
                      <a
                        aria-current={null}
                        href="/console/custom-pages/privacy"
                        onClick={[Function]}
                      >
                        Privacy Policy
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="card"
              >
                <div
                  className="card-header"
                >
                  <div
                    className="card-header"
                    onClick={[Function]}
                    variant="link"
                  >
                    Instance Settings
                  </div>
                </div>
                <div
                  aria-expanded={null}
                  className="collapse"
                >
                  <div
                    className="card-body"
                  >
                    <div
                      className="flex-column nav card-header-undefined"
                      onKeyDown={[Function]}
                    >
                      <a
                        aria-current={null}
                        href="/console/settings/general"
                        onClick={[Function]}
                      >
                        General
                      </a>
                      <a
                        aria-current="page"
                        className="disabled active"
                        href="/"
                        onClick={[Function]}
                        style={Object {}}
                      >
                        Domain
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="card"
              >
                <div
                  className="card-header"
                >
                  <div
                    className="card-header"
                    onClick={[Function]}
                    variant="link"
                  >
                    Courses (Studio)
                  </div>
                </div>
                <div
                  aria-expanded={null}
                  className="collapse"
                >
                  <div
                    className="card-body"
                  >
                    <div
                      className="flex-column nav card-header-undefined"
                      onKeyDown={[Function]}
                    >
                      <a
                        aria-current={null}
                        href="/console/courses/manage"
                        onClick={[Function]}
                      >
                        Manage
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-9"
          >
            <div
              className="customization-form"
            >
              <h2>
                Preview and colors
              </h2>
              <div
                className="theme-colors-and-prevew-container container"
              >
                <div
                  className="row"
                >
                  <div
                    className="col"
                  >
                    <div
                      className="row"
                    >
                      <div
                        className="side-buttons col"
                      >
                        <div
                          className="color-input form-group"
                        >
                          <label
                            className="form-label"
                          >
                            Main Color
                          </label>
                          <div
                            className="row"
                          >
                            <input
                              className="input-field-color form-control"
                              disabled={true}
                              name="mainColor"
                              onClick={[Function]}
                              readOnly={true}
                              value="#444444"
                            />
                            <div
                              className="input-field-preview"
                              style={
                                Object {
                                  "backgroundColor": "#444444",
                                }
                              }
                            />
                            <div
                              className="info-icon"
                              onBlur={[Function]}
                              onFocus={[Function]}
                              onMouseOut={[Function]}
                              onMouseOver={[Function]}
                            >
                              <i
                                className="fas fa-info-circle"
                              />
                            </div>
                          </div>
                          <p>
                            <button
                              className="reset-value"
                              onClick={[Function]}
                              type="button"
                            >
                              Reset
                            </button>
                          </p>
                        </div>
                        <div
                          className="color-input form-group"
                        >
                          <label
                            className="form-label"
                          >
                            Link Color
                          </label>
                          <div
                            className="row"
                          >
                            <input
                              className="input-field-color form-control"
                              disabled={true}
                              name="linkColor"
                              onClick={[Function]}
                              readOnly={true}
                              value="#FFAAFF"
                            />
                            <div
                              className="input-field-preview"
                              style={
                                Object {
                                  "backgroundColor": "#FFAAFF",
                                }
                              }
                            />
                            <div
                              className="info-icon"
                              onBlur={[Function]}
                              onFocus={[Function]}
                              onMouseOut={[Function]}
                              onMouseOver={[Function]}
                            >
                              <i
                                className="fas fa-info-circle"
                              />
                            </div>
                          </div>
                          <p>
                            <button
                              className="reset-value"
                              onClick={[Function]}
                              type="button"
                            >
                              Reset
                            </button>
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="col-9"
                  >
                    <div
                      className="theme-preview"
                    >
                      <div
                        className="theme-preview-navigation row"
                      >
                        <div
                          className="theme-preview-navigation col"
                        >
                          <div
                            className="main-navigation-menu navigation-menu row"
                            style={
                              Object {
                                "background": undefined,
                              }
                            }
                          >
                            <div
                              className="logo col-md-1"
                            />
                            <div
                              className="col-md-1"
                            >
                              <button
                                className="customizable-link"
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                style={
                                  Object {
                                    "borderBottomColor": undefined,
                                    "color": undefined,
                                  }
                                }
                                type="button"
                              >
                                Courses
                              </button>
                            </div>
                            <div
                              className="col-md-3"
                            >
                              <button
                                className="customizable-link"
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                style={
                                  Object {
                                    "borderBottomColor": undefined,
                                    "color": undefined,
                                  }
                                }
                                type="button"
                              >
                                Discover New
                              </button>
                            </div>
                            <div
                              className="col-md-7"
                            >
                              <div
                                className="navigation-menu navigation-submenu row"
                              >
                                <div
                                  className="col"
                                >
                                  <button
                                    className="customizable-button"
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                    style={
                                      Object {
                                        "background": undefined,
                                        "borderColor": undefined,
                                        "color": undefined,
                                      }
                                    }
                                    type="button"
                                  >
                                    Register
                                  </button>
                                  <button
                                    className="customizable-button"
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                    style={
                                      Object {
                                        "background": undefined,
                                        "borderColor": undefined,
                                        "color": undefined,
                                      }
                                    }
                                    type="button"
                                  >
                                    Sign in
                                  </button>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        className="theme-home"
                      >
                        <div
                          className="theme-hero-container row"
                        >
                          <div
                            className="col"
                          >
                            <div
                              className="hero-preview"
                            >
                              <div
                                className="outer-wrapper"
                                style={Object {}}
                              >
                                <div
                                  className="title"
                                >
                                  <div
                                    className="heading-group"
                                  >
                                    <h1
                                      style={Object {}}
                                    >
                                      
                                    </h1>
                                    <p
                                      style={Object {}}
                                    >
                                      
                                    </p>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          className="theme-courses-container row"
                        >
                          <div
                            className="theme-courses-item col-md-3"
                          >
                            <div
                              className="courses-listing-item row"
                              style={
                                Object {
                                  "borderBottomColor": "#FFAAFF",
                                }
                              }
                            >
                              <div
                                className="course-image col"
                              >
                                <img
                                  alt="course"
                                  src="course_image.jpg"
                                />
                              </div>
                              <div
                                className="organization col"
                                style={
                                  Object {
                                    "color": "#444444",
                                  }
                                }
                              >
                                edX
                              </div>
                              <div
                                className="course-number col"
                                style={
                                  Object {
                                    "color": "#444444",
                                  }
                                }
                              >
                                DemoX
                              </div>
                              <div
                                className="course-name col"
                              >
                                <button
                                  className="customizable-link noHover"
                                  onMouseEnter={[Function]}
                                  onMouseLeave={[Function]}
                                  style={
                                    Object {
                                      "borderBottomColor": undefined,
                                      "color": "#FFAAFF",
                                    }
                                  }
                                  type="button"
                                >
                                  <span>
                                    Demonstration Course
                                  </span>
                                </button>
                              </div>
                              <div
                                className="course-start col"
                                style={
                                  Object {
                                    "color": "#444444",
                                  }
                                }
                              >
                                Starts: 
                                Feb 5, 2013
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        className="theme-footer row"
                      >
                        <div
                          className="col"
                        >
                          <div
                            className="custom-footer"
                            style={
                              Object {
                                "background": undefined,
                              }
                            }
                          >
                            <div
                              className="row"
                            >
                              <div
                                className="col-md-4"
                              >
                                <div
                                  className="footer-top-links row"
                                >
                                  <button
                                    className="customizable-link noHover"
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                    style={
                                      Object {
                                        "borderBottomColor": undefined,
                                        "color": undefined,
                                      }
                                    }
                                    type="button"
                                  >
                                    <span>
                                      About
                                    </span>
                                  </button>
                                  <button
                                    className="customizable-link noHover"
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                    style={
                                      Object {
                                        "borderBottomColor": undefined,
                                        "color": undefined,
                                      }
                                    }
                                    type="button"
                                  >
                                    <span>
                                      Blog
                                    </span>
                                  </button>
                                  <button
                                    className="customizable-link noHover"
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                    style={
                                      Object {
                                        "borderBottomColor": undefined,
                                        "color": undefined,
                                      }
                                    }
                                    type="button"
                                  >
                                    <span>
                                      Contact
                                    </span>
                                  </button>
                                  <button
                                    className="customizable-link noHover"
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                    style={
                                      Object {
                                        "borderBottomColor": undefined,
                                        "color": undefined,
                                      }
                                    }
                                    type="button"
                                  >
                                    <span>
                                      Donate
                                    </span>
                                  </button>
                                </div>
                              </div>
                              <div
                                className="col-md-5"
                              />
                              <div
                                className="openedx-logo col-md-3"
                              >
                                <img
                                  alt="Open edX logo"
                                  src="openedx-logo-footer.png"
                                />
                              </div>
                            </div>
                            <div
                              className="row"
                            >
                              <div
                                className="logo col-md-1"
                              />
                            </div>
                            <div
                              className="row"
                            >
                              <div
                                className="copyright"
                                style={
                                  Object {
                                    "color": undefined,
                                  }
                                }
                              >
                                © test. 
                                All rights reserved except where noted. edX, Open edX and their respective logos are registered trademarks of edX Inc.
                              </div>
                            </div>
                            <div
                              className="legal row"
                            >
                              <button
                                className="customizable-link noHover"
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                style={
                                  Object {
                                    "borderBottomColor": undefined,
                                    "color": undefined,
                                  }
                                }
                                type="button"
                              >
                                <span>
                                  Privacy Policy
                                </span>
                              </button>
                              <button
                                className="customizable-link noHover"
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                style={
                                  Object {
                                    "borderBottomColor": undefined,
                                    "color": undefined,
                                  }
                                }
                                type="button"
                              >
                                <span>
                                  Terms of Service
                                </span>
                              </button>
                              <button
                                className="customizable-link noHover"
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                style={
                                  Object {
                                    "borderBottomColor": undefined,
                                    "color": undefined,
                                  }
                                }
                                type="button"
                              >
                                <span>
                                  Honor Code
                                </span>
                              </button>
                              <button
                                className="customizable-link noHover"
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                style={
                                  Object {
                                    "borderBottomColor": undefined,
                                    "color": undefined,
                                  }
                                }
                                type="button"
                              >
                                <span>
                                  Take free online courses at edX.org
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Theme preview and colors page Render theme settings page with theme set up. 1`] = `
<div
  className="console-page"
>
  <div
    className="d-flex justify-content-center align-middle email-activation-alert"
  >
    <i
      className="alert-icon fas fa-exclamation-triangle fa-xs"
    />
    One of your email addresses is pending confirmation. Please confirm it to begin managing your Open edX instance.
  </div>
  <div
    className="console-page-container"
  >
    <div
      className="console-page-content row"
    >
      <div
        className="container-fluid"
      >
        <div
          className="row"
        >
          <div
            className="col-md-3"
          >
            <div
              className="customization-menu accordion"
            >
              <div
                className="card"
              >
                <div
                  className="card-header"
                >
                  <div
                    className="card-header"
                    onClick={[Function]}
                    variant="link"
                  >
                    Theme
                  </div>
                </div>
                <div
                  aria-expanded={null}
                  className="collapse show"
                >
                  <div
                    className="card-body"
                  >
                    <div
                      className="flex-column nav card-header-undefined"
                      onKeyDown={[Function]}
                    >
                      <a
                        aria-current={null}
                        href="/console/theming/preview-and-colors"
                        onClick={[Function]}
                      >
                        Preview & colors
                      </a>
                      <a
                        aria-current={null}
                        href="/console/theming/logos"
                        onClick={[Function]}
                      >
                        Logos
                      </a>
                      <a
                        aria-current={null}
                        href="/console/theming/buttons"
                        onClick={[Function]}
                      >
                        Buttons
                      </a>
                      <a
                        aria-current={null}
                        href="/console/theming/navigation"
                        onClick={[Function]}
                      >
                        Navigation
                      </a>
                      <a
                        aria-current={null}
                        href="/console/theming/footer"
                        onClick={[Function]}
                      >
                        Footer
                      </a>
                      <a
                        aria-current={null}
                        href="/console/theming/hero"
                        onClick={[Function]}
                      >
                        Hero
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="card"
              >
                <div
                  className="card-header"
                >
                  <div
                    className="card-header"
                    onClick={[Function]}
                    variant="link"
                  >
                    Custom Pages
                  </div>
                </div>
                <div
                  aria-expanded={null}
                  className="collapse"
                >
                  <div
                    className="card-body"
                  >
                    <div
                      className="flex-column nav card-header-undefined"
                      onKeyDown={[Function]}
                    >
                      <a
                        aria-current={null}
                        href="/console/custom-pages/about"
                        onClick={[Function]}
                      >
                        About
                      </a>
                      <a
                        aria-current={null}
                        href="/console/custom-pages/contact"
                        onClick={[Function]}
                      >
                        Contact
                      </a>
                      <a
                        aria-current={null}
                        href="/console/custom-pages/donate"
                        onClick={[Function]}
                      >
                        Donate
                      </a>
                      <a
                        aria-current={null}
                        href="/console/custom-pages/tos"
                        onClick={[Function]}
                      >
                        Terms of Service
                      </a>
                      <a
                        aria-current={null}
                        href="/console/custom-pages/honor"
                        onClick={[Function]}
                      >
                        Honor Code
                      </a>
                      <a
                        aria-current={null}
                        href="/console/custom-pages/privacy"
                        onClick={[Function]}
                      >
                        Privacy Policy
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="card"
              >
                <div
                  className="card-header"
                >
                  <div
                    className="card-header"
                    onClick={[Function]}
                    variant="link"
                  >
                    Instance Settings
                  </div>
                </div>
                <div
                  aria-expanded={null}
                  className="collapse"
                >
                  <div
                    className="card-body"
                  >
                    <div
                      className="flex-column nav card-header-undefined"
                      onKeyDown={[Function]}
                    >
                      <a
                        aria-current={null}
                        href="/console/settings/general"
                        onClick={[Function]}
                      >
                        General
                      </a>
                      <a
                        aria-current="page"
                        className="disabled active"
                        href="/"
                        onClick={[Function]}
                        style={Object {}}
                      >
                        Domain
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="card"
              >
                <div
                  className="card-header"
                >
                  <div
                    className="card-header"
                    onClick={[Function]}
                    variant="link"
                  >
                    Courses (Studio)
                  </div>
                </div>
                <div
                  aria-expanded={null}
                  className="collapse"
                >
                  <div
                    className="card-body"
                  >
                    <div
                      className="flex-column nav card-header-undefined"
                      onKeyDown={[Function]}
                    >
                      <a
                        aria-current={null}
                        href="/console/courses/manage"
                        onClick={[Function]}
                      >
                        Manage
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-9"
          >
            <div
              className="customization-form"
            >
              <h2>
                Preview and colors
              </h2>
              <div
                className="theme-colors-and-prevew-container container"
              >
                <div
                  className="row"
                >
                  <div
                    className="col"
                  >
                    <div
                      className="row"
                    >
                      <div
                        className="side-buttons col"
                      >
                        <div
                          className="color-input form-group"
                        >
                          <label
                            className="form-label"
                          >
                            Main Color
                          </label>
                          <div
                            className="row"
                          >
                            <input
                              className="input-field-color form-control"
                              disabled={false}
                              name="mainColor"
                              onClick={[Function]}
                              readOnly={true}
                              value="#444444"
                            />
                            <div
                              className="input-field-preview"
                              style={
                                Object {
                                  "backgroundColor": "#444444",
                                }
                              }
                            />
                            <div
                              className="info-icon"
                              onBlur={[Function]}
                              onFocus={[Function]}
                              onMouseOut={[Function]}
                              onMouseOver={[Function]}
                            >
                              <i
                                className="fas fa-info-circle"
                              />
                            </div>
                          </div>
                          <p>
                            <button
                              className="reset-value"
                              onClick={[Function]}
                              type="button"
                            >
                              Reset
                            </button>
                          </p>
                        </div>
                        <div
                          className="color-input form-group"
                        >
                          <label
                            className="form-label"
                          >
                            Link Color
                          </label>
                          <div
                            className="row"
                          >
                            <input
                              className="input-field-color form-control"
                              disabled={false}
                              name="linkColor"
                              onClick={[Function]}
                              readOnly={true}
                              value="#FFAAFF"
                            />
                            <div
                              className="input-field-preview"
                              style={
                                Object {
                                  "backgroundColor": "#FFAAFF",
                                }
                              }
                            />
                            <div
                              className="info-icon"
                              onBlur={[Function]}
                              onFocus={[Function]}
                              onMouseOut={[Function]}
                              onMouseOver={[Function]}
                            >
                              <i
                                className="fas fa-info-circle"
                              />
                            </div>
                          </div>
                          <p>
                            <button
                              className="reset-value"
                              onClick={[Function]}
                              type="button"
                            >
                              Reset
                            </button>
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="col-9"
                  >
                    <div
                      className="theme-preview"
                    >
                      <div
                        className="theme-preview-navigation row"
                      >
                        <div
                          className="theme-preview-navigation col"
                        >
                          <div
                            className="main-navigation-menu navigation-menu row"
                            style={
                              Object {
                                "background": undefined,
                              }
                            }
                          >
                            <div
                              className="logo col-md-1"
                            />
                            <div
                              className="col-md-1"
                            >
                              <button
                                className="customizable-link"
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                style={
                                  Object {
                                    "borderBottomColor": undefined,
                                    "color": undefined,
                                  }
                                }
                                type="button"
                              >
                                Courses
                              </button>
                            </div>
                            <div
                              className="col-md-3"
                            >
                              <button
                                className="customizable-link"
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                style={
                                  Object {
                                    "borderBottomColor": undefined,
                                    "color": undefined,
                                  }
                                }
                                type="button"
                              >
                                Discover New
                              </button>
                            </div>
                            <div
                              className="col-md-7"
                            >
                              <div
                                className="navigation-menu navigation-submenu row"
                              >
                                <div
                                  className="col"
                                >
                                  <button
                                    className="customizable-button"
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                    style={
                                      Object {
                                        "background": undefined,
                                        "borderColor": undefined,
                                        "color": undefined,
                                      }
                                    }
                                    type="button"
                                  >
                                    Register
                                  </button>
                                  <button
                                    className="customizable-button"
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                    style={
                                      Object {
                                        "background": undefined,
                                        "borderColor": undefined,
                                        "color": undefined,
                                      }
                                    }
                                    type="button"
                                  >
                                    Sign in
                                  </button>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        className="theme-home"
                      >
                        <div
                          className="theme-hero-container row"
                        >
                          <div
                            className="col"
                          >
                            <div
                              className="hero-preview"
                            >
                              <div
                                className="outer-wrapper"
                                style={Object {}}
                              >
                                <div
                                  className="title"
                                >
                                  <div
                                    className="heading-group"
                                  >
                                    <h1
                                      style={Object {}}
                                    >
                                      
                                    </h1>
                                    <p
                                      style={Object {}}
                                    >
                                      
                                    </p>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          className="theme-courses-container row"
                        >
                          <div
                            className="theme-courses-item col-md-3"
                          >
                            <div
                              className="courses-listing-item row"
                              style={
                                Object {
                                  "borderBottomColor": "#FFAAFF",
                                }
                              }
                            >
                              <div
                                className="course-image col"
                              >
                                <img
                                  alt="course"
                                  src="course_image.jpg"
                                />
                              </div>
                              <div
                                className="organization col"
                                style={
                                  Object {
                                    "color": "#444444",
                                  }
                                }
                              >
                                edX
                              </div>
                              <div
                                className="course-number col"
                                style={
                                  Object {
                                    "color": "#444444",
                                  }
                                }
                              >
                                DemoX
                              </div>
                              <div
                                className="course-name col"
                              >
                                <button
                                  className="customizable-link noHover"
                                  onMouseEnter={[Function]}
                                  onMouseLeave={[Function]}
                                  style={
                                    Object {
                                      "borderBottomColor": undefined,
                                      "color": "#FFAAFF",
                                    }
                                  }
                                  type="button"
                                >
                                  <span>
                                    Demonstration Course
                                  </span>
                                </button>
                              </div>
                              <div
                                className="course-start col"
                                style={
                                  Object {
                                    "color": "#444444",
                                  }
                                }
                              >
                                Starts: 
                                Feb 5, 2013
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        className="theme-footer row"
                      >
                        <div
                          className="col"
                        >
                          <div
                            className="custom-footer"
                            style={
                              Object {
                                "background": undefined,
                              }
                            }
                          >
                            <div
                              className="row"
                            >
                              <div
                                className="col-md-4"
                              >
                                <div
                                  className="footer-top-links row"
                                >
                                  <button
                                    className="customizable-link noHover"
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                    style={
                                      Object {
                                        "borderBottomColor": undefined,
                                        "color": undefined,
                                      }
                                    }
                                    type="button"
                                  >
                                    <span>
                                      About
                                    </span>
                                  </button>
                                  <button
                                    className="customizable-link noHover"
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                    style={
                                      Object {
                                        "borderBottomColor": undefined,
                                        "color": undefined,
                                      }
                                    }
                                    type="button"
                                  >
                                    <span>
                                      Blog
                                    </span>
                                  </button>
                                  <button
                                    className="customizable-link noHover"
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                    style={
                                      Object {
                                        "borderBottomColor": undefined,
                                        "color": undefined,
                                      }
                                    }
                                    type="button"
                                  >
                                    <span>
                                      Contact
                                    </span>
                                  </button>
                                  <button
                                    className="customizable-link noHover"
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                    style={
                                      Object {
                                        "borderBottomColor": undefined,
                                        "color": undefined,
                                      }
                                    }
                                    type="button"
                                  >
                                    <span>
                                      Donate
                                    </span>
                                  </button>
                                </div>
                              </div>
                              <div
                                className="col-md-5"
                              />
                              <div
                                className="openedx-logo col-md-3"
                              >
                                <img
                                  alt="Open edX logo"
                                  src="openedx-logo-footer.png"
                                />
                              </div>
                            </div>
                            <div
                              className="row"
                            >
                              <div
                                className="logo col-md-1"
                              />
                            </div>
                            <div
                              className="row"
                            >
                              <div
                                className="copyright"
                                style={
                                  Object {
                                    "color": undefined,
                                  }
                                }
                              >
                                © test. 
                                All rights reserved except where noted. edX, Open edX and their respective logos are registered trademarks of edX Inc.
                              </div>
                            </div>
                            <div
                              className="legal row"
                            >
                              <button
                                className="customizable-link noHover"
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                style={
                                  Object {
                                    "borderBottomColor": undefined,
                                    "color": undefined,
                                  }
                                }
                                type="button"
                              >
                                <span>
                                  Privacy Policy
                                </span>
                              </button>
                              <button
                                className="customizable-link noHover"
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                style={
                                  Object {
                                    "borderBottomColor": undefined,
                                    "color": undefined,
                                  }
                                }
                                type="button"
                              >
                                <span>
                                  Terms of Service
                                </span>
                              </button>
                              <button
                                className="customizable-link noHover"
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                style={
                                  Object {
                                    "borderBottomColor": undefined,
                                    "color": undefined,
                                  }
                                }
                                type="button"
                              >
                                <span>
                                  Honor Code
                                </span>
                              </button>
                              <button
                                className="customizable-link noHover"
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                style={
                                  Object {
                                    "borderBottomColor": undefined,
                                    "color": undefined,
                                  }
                                }
                                type="button"
                              >
                                <span>
                                  Take free online courses at edX.org
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Theme preview and colors page renders without crashing 1`] = `
<div
  className="console-page"
>
  <div
    className="d-flex justify-content-center align-middle redeployment-toolbar"
  >
    <div
      className="redeployment-nav"
    >
      <span
        className="status-pill badge badge-pill badge-primary"
        style={
          Object {
            "backgroundColor": "grey",
          }
        }
      >
        <div
          className="text"
        >
          Loading
        </div>
        <i
          className="fas fa-question-circle fa-lg"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        />
      </span>
      <button
        className="float-right btn-disabled btn btn-primary btn-lg"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <div
          className="button-text-layer"
        >
          Publish changes
        </div>
      </button>
    </div>
    <div
      className="toast-container"
    />
  </div>
  <div
    className="console-page-container"
  >
    <div
      className="console-page-content row"
    >
      <div
        className="container-fluid"
      >
        <div
          className="row"
        >
          <div
            className="col-md-3"
          >
            <div
              className="customization-menu accordion"
            >
              <div
                className="card"
              >
                <div
                  className="card-header"
                >
                  <div
                    className="card-header"
                    onClick={[Function]}
                    variant="link"
                  >
                    Theme
                  </div>
                </div>
                <div
                  aria-expanded={null}
                  className="collapse show"
                >
                  <div
                    className="card-body"
                  >
                    <div
                      className="flex-column nav card-header-undefined"
                      onKeyDown={[Function]}
                    >
                      <a
                        aria-current={null}
                        href="/console/theming/preview-and-colors"
                        onClick={[Function]}
                      >
                        Preview & colors
                      </a>
                      <a
                        aria-current={null}
                        href="/console/theming/logos"
                        onClick={[Function]}
                      >
                        Logos
                      </a>
                      <a
                        aria-current={null}
                        href="/console/theming/buttons"
                        onClick={[Function]}
                      >
                        Buttons
                      </a>
                      <a
                        aria-current={null}
                        href="/console/theming/navigation"
                        onClick={[Function]}
                      >
                        Navigation
                      </a>
                      <a
                        aria-current={null}
                        href="/console/theming/footer"
                        onClick={[Function]}
                      >
                        Footer
                      </a>
                      <a
                        aria-current={null}
                        href="/console/theming/hero"
                        onClick={[Function]}
                      >
                        Hero
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="card"
              >
                <div
                  className="card-header"
                >
                  <div
                    className="card-header"
                    onClick={[Function]}
                    variant="link"
                  >
                    Custom Pages
                  </div>
                </div>
                <div
                  aria-expanded={null}
                  className="collapse"
                >
                  <div
                    className="card-body"
                  >
                    <div
                      className="flex-column nav card-header-undefined"
                      onKeyDown={[Function]}
                    >
                      <a
                        aria-current={null}
                        href="/console/custom-pages/about"
                        onClick={[Function]}
                      >
                        About
                      </a>
                      <a
                        aria-current={null}
                        href="/console/custom-pages/contact"
                        onClick={[Function]}
                      >
                        Contact
                      </a>
                      <a
                        aria-current={null}
                        href="/console/custom-pages/donate"
                        onClick={[Function]}
                      >
                        Donate
                      </a>
                      <a
                        aria-current={null}
                        href="/console/custom-pages/tos"
                        onClick={[Function]}
                      >
                        Terms of Service
                      </a>
                      <a
                        aria-current={null}
                        href="/console/custom-pages/honor"
                        onClick={[Function]}
                      >
                        Honor Code
                      </a>
                      <a
                        aria-current={null}
                        href="/console/custom-pages/privacy"
                        onClick={[Function]}
                      >
                        Privacy Policy
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="card"
              >
                <div
                  className="card-header"
                >
                  <div
                    className="card-header"
                    onClick={[Function]}
                    variant="link"
                  >
                    Instance Settings
                  </div>
                </div>
                <div
                  aria-expanded={null}
                  className="collapse"
                >
                  <div
                    className="card-body"
                  >
                    <div
                      className="flex-column nav card-header-undefined"
                      onKeyDown={[Function]}
                    >
                      <a
                        aria-current={null}
                        href="/console/settings/general"
                        onClick={[Function]}
                      >
                        General
                      </a>
                      <a
                        aria-current="page"
                        className="disabled active"
                        href="/"
                        onClick={[Function]}
                        style={Object {}}
                      >
                        Domain
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="card"
              >
                <div
                  className="card-header"
                >
                  <div
                    className="card-header"
                    onClick={[Function]}
                    variant="link"
                  >
                    Courses (Studio)
                  </div>
                </div>
                <div
                  aria-expanded={null}
                  className="collapse"
                >
                  <div
                    className="card-body"
                  >
                    <div
                      className="flex-column nav card-header-undefined"
                      onKeyDown={[Function]}
                    >
                      <a
                        aria-current={null}
                        href="/console/courses/manage"
                        onClick={[Function]}
                      >
                        Manage
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-9"
          >
            <div
              className="customization-form"
            >
              <div
                className="loading"
              >
                <i
                  className="fas fa-2x fa-sync-alt fa-spin"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
